# HDMlib

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.md  INSTALL  LICENSE  License.txt  Makefile.am  Makefile.in  NEWS  README  README.md  config.h.in  configure  configure.ac  hdm-config.in
cmake/: CompileOptionSelector.cmake  FindHDM.cmake  Toolchain_K.cmake  Toolchain_fx10.cmake  Toolchain_fx100.cmake  hdm_package.cmake
doc/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  hdmlib_ug.tex  make-ref-man  make-ug
doc/doxygen/: dox_HDMlib.conf
examples/: CMakeLists.txt  README.txt
examples/SampleCreator/: BCMPolylib.cpp  BCMPolylib.h  BlockBoundingBox.h  BoundaryConditionSetter.h  Config.h  PolygonDivider.h  main.cpp  test.conf  test.tp
examples/SampleLoader/: BoundaryConditionSetter.h  main.cpp
include/: BCMFileCommon.h  BCMFileLoader.h  BCMFileSaver.h  BCMRLE.h  BCMTypes.h  BitVoxel.h  DirUtil.h  ErrorUtil.h  FileSystemUtil.h  IdxBlock.h  IdxStep.h  LeafBlockLoader.h  LeafBlockSaver.h  Logger.h  PartitionMapper.h  RLE.h  Vec3.h  hdmVersion.h  hdmVersion.h.in  hdm_Version.h.in  mpi_stubs.h  type.h
src/: BCMFileLoader.cpp  BCMFileSaver.cpp  BitVoxel.cpp  CMakeLists.txt  DirUtil.cpp  ErrorUtil.cpp  FileSystemUtil.cpp  IdxStep.cpp  LeafBlockLoader.cpp  LeafBlockSaver.cpp  Logger.cpp  Makefile.am  Makefile.in
