###
#########################################################################
#
# HDMlib - Hierarchical Data Management library
#
# Copyright (c) 2014 Advanced Institute for Computational Science, RIKEN.
# All rights reserved.
#
#########################################################################
####

doc_includedir = $(prefix)/doc
doc_include_HEADERS = 
#    $(top_builddir)/doc/hdmlib_ug.pdf \
#    $(top_builddir)/doc/reference.pdf

# dist_data_DATA = doxygen/Doxyfile doxygen/makepdf.sh
